# TSiSa_rk_1

./: CMakeLists.txt  README.md  func.h  main.cpp  metods_lab1.cpp  random_lab2.cpp
